--- a/addons/auth_signup/i18n/es.po
+++ b/addons/auth_signup/i18n/es.po
@@ -1,20 +1,20 @@
-# Translation of Odoo Server.
+# Translation of HaliBlu Server.
 # This file contains the translation of the following modules:
 # 	* auth_signup
 # 
 # Translators:
-# Wil Odoo, 2023
+# Wil HaliBlu, 2023
 # Pedro M. Baeza <pedro.baeza@tecnativa.com>, 2024
 # Larissa Manderfeld, 2024
 # 
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 17.0\n"
+"Project-Id-Version: HaliBlu Server 17.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-08-13 10:27+0000\n"
 "PO-Revision-Date: 2023-10-26 23:09+0000\n"
 "Last-Translator: Larissa Manderfeld, 2024\n"
-"Language-Team: Spanish (https://app.transifex.com/odoo/teams/41243/es/)\n"
+"Language-Team: Spanish (https://app.transifex.com/HaliBlu/teams/41243/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
@@ -30,11 +30,11 @@ msgstr "+1 650-123-4567"
 #: model_terms:ir.ui.view,arch_db:auth_signup.reset_password_email
 msgid ""
 ",<br/><br/>\n"
-"                                A password reset was requested for the Odoo account linked to this email.\n"
+"                                A password reset was requested for the HaliBlu account linked to this email.\n"
 "                                You may change your password by following this link which will remain valid during 24 hours:<br/>"
 msgstr ""
 ",<br/><br/>\n"
-"                                Solicitó restablecer la contraseña de la cuenta de Odoo vinculada a este correo electrónico.\n"
+"                                Solicitó restablecer la contraseña de la cuenta de HaliBlu vinculada a este correo electrónico.\n"
 "                                Puede cambiar su contraseña con este enlace, que será válido durante 24 horas:<br/>"
 
 #. module: auth_signup
@@ -221,7 +221,7 @@ msgid ""
 "        <td align=\"center\" style=\"min-width: 590px;\">\n"
 "            <table border=\"0\" cellpadding=\"0\" cellspacing=\"0\" width=\"590\" style=\"min-width: 590px; background-color: white; padding: 0px 8px 0px 8px; border-collapse:separate;\">\n"
 "                <tr><td valign=\"middle\">\n"
-"                    <span style=\"font-size: 10px;\">Welcome to Odoo</span><br>\n"
+"                    <span style=\"font-size: 10px;\">Welcome to HaliBlu</span><br>\n"
 "                    <span style=\"font-size: 20px; font-weight: bold;\">\n"
 "                        <t t-out=\"object.name or ''\">Marc Demo</t>\n"
 "                    </span>\n"
@@ -241,20 +241,20 @@ msgid ""
 "                <tr><td valign=\"top\" style=\"font-size: 13px;\">\n"
 "                    <div>\n"
 "                        Dear <t t-out=\"object.name or ''\">Marc Demo</t>,<br><br>\n"
-"                        You have been invited by <t t-out=\"object.create_uid.name or ''\">OdooBot</t> of <t t-out=\"object.company_id.name or ''\">YourCompany</t> to connect on Odoo.\n"
+"                        You have been invited by <t t-out=\"object.create_uid.name or ''\">HaliBluBot</t> of <t t-out=\"object.company_id.name or ''\">YourCompany</t> to connect on HaliBlu.\n"
 "                        <div style=\"margin: 16px 0px 16px 0px;\">\n"
 "                            <a t-att-href=\"object.signup_url\" style=\"background-color: #875A7B; padding: 8px 16px 8px 16px; text-decoration: none; color: #fff; border-radius: 5px; font-size:13px;\">\n"
 "                                Accept invitation\n"
 "                            </a>\n"
 "                        </div>\n"
 "                        <t t-set=\"website_url\" t-value=\"object.get_base_url()\"></t>\n"
-"                        Your Odoo domain is: <b><a t-att-href=\"website_url\" t-out=\"website_url or ''\">http://yourcompany.odoo.com</a></b><br>\n"
+"                        Your HaliBlu domain is: <b><a t-att-href=\"website_url\" t-out=\"website_url or ''\">http://yourcompany.HaliBlu.com</a></b><br>\n"
 "                        Your sign in email is: <b><a t-attf-href=\"/web/login?login={{ object.email }}\" target=\"_blank\" t-out=\"object.email or ''\">mark.brown23@example.com</a></b><br><br>\n"
-"                        Never heard of Odoo? It’s an all-in-one business software loved by 7+ million users. It will considerably improve your experience at work and increase your productivity.\n"
+"                        Never heard of HaliBlu? It’s an all-in-one business software loved by 7+ million users. It will considerably improve your experience at work and increase your productivity.\n"
 "                        <br><br>\n"
-"                        Have a look at the <a href=\"https://www.odoo.com/page/tour?utm_source=db&amp;utm_medium=auth\" style=\"color: #875A7B;\">Odoo Tour</a> to discover the tool.\n"
+"                        Have a look at the <a href=\"https://www.HaliBlu.com/page/tour?utm_source=db&amp;utm_medium=auth\" style=\"color: #875A7B;\">HaliBlu Tour</a> to discover the tool.\n"
 "                        <br><br>\n"
-"                        Enjoy Odoo!<br>\n"
+"                        Enjoy HaliBlu!<br>\n"
 "                        --<br>The <t t-out=\"object.company_id.name or ''\">YourCompany</t> Team\n"
 "                    </div>\n"
 "                </td></tr>\n"
@@ -290,7 +290,7 @@ msgid ""
 "<tr><td align=\"center\" style=\"min-width: 590px;\">\n"
 "    <table border=\"0\" cellpadding=\"0\" cellspacing=\"0\" width=\"590\" style=\"min-width: 590px; background-color: #F1F1F1; color: #454748; padding: 8px; border-collapse:separate;\">\n"
 "      <tr><td style=\"text-align: center; font-size: 13px;\">\n"
-"        Powered by <a target=\"_blank\" href=\"https://www.odoo.com?utm_source=db&amp;utm_medium=auth\" style=\"color: #875A7B;\">Odoo</a>\n"
+"        Powered by <a target=\"_blank\" href=\"https://www.HaliBlu.com?utm_source=db&amp;utm_medium=auth\" style=\"color: #875A7B;\">HaliBlu</a>\n"
 "      </td></tr>\n"
 "    </table>\n"
 "</td></tr>\n"
@@ -304,7 +304,7 @@ msgstr ""
 "        <td align=\"center\" style=\"min-width: 590px;\">\n"
 "            <table border=\"0\" cellpadding=\"0\" cellspacing=\"0\" width=\"590\" style=\"min-width: 590px; background-color: white; padding: 0px 8px 0px 8px; border-collapse:separate;\">\n"
 "                <tr><td valign=\"middle\">\n"
-"                    <span style=\"font-size: 10px;\">Bienvenido a Odoo</span><br>\n"
+"                    <span style=\"font-size: 10px;\">Bienvenido a HaliBlu</span><br>\n"
 "                    <span style=\"font-size: 20px; font-weight: bold;\">\n"
 "                        <t t-out=\"object.name or ''\">Marc Demo</t>\n"
 "                    </span>\n"
@@ -324,20 +324,20 @@ msgstr ""
 "                <tr><td valign=\"top\" style=\"font-size: 13px;\">\n"
 "                    <div>\n"
 "                        Estimado/a <t t-out=\"object.name or ''\">Marc Demo</t>,<br><br>\n"
-"                        <t t-out=\"object.create_uid.name or ''\">OdooBot</t> de su <t t-out=\"object.company_id.name or ''\">SuCompañía</t> le invitó a conectarse a Odoo.\n"
+"                        <t t-out=\"object.create_uid.name or ''\">HaliBluBot</t> de su <t t-out=\"object.company_id.name or ''\">SuCompañía</t> le invitó a conectarse a HaliBlu.\n"
 "                        <div style=\"margin: 16px 0px 16px 0px;\">\n"
 "                            <a t-att-href=\"object.signup_url\" style=\"background-color: #875A7B; padding: 8px 16px 8px 16px; text-decoration: none; color: #fff; border-radius: 5px; font-size:13px;\">\n"
 "                                Aceptar invitación\n"
 "                            </a>\n"
 "                        </div>\n"
 "                        <t t-set=\"website_url\" t-value=\"object.get_base_url()\"></t>\n"
-"                        Su dominio de Odoo es: <b><a t-att-href=\"website_url\" t-out=\"website_url or ''\">http://sucompañía.odoo.com</a></b><br>\n"
+"                        Su dominio de HaliBlu es: <b><a t-att-href=\"website_url\" t-out=\"website_url or ''\">http://sucompañía.HaliBlu.com</a></b><br>\n"
 "                        Su correo electrónico de inicio de sesión es: <b><a t-attf-href=\"/web/login?login={{ object.email }}\" target=\"_blank\" t-out=\"object.email or ''\">mark.brown23@ejemplo.com</a></b><br><br>\n"
-"                        ¿Nunca ha escuchado de Odoo? Es un software empresarial integral con una comunidad de más de 7 millones de usuarios. Mejorará considerablemente su experiencia en el trabajo e incrementará su productividad.\n"
+"                        ¿Nunca ha escuchado de HaliBlu? Es un software empresarial integral con una comunidad de más de 7 millones de usuarios. Mejorará considerablemente su experiencia en el trabajo e incrementará su productividad.\n"
 "                        <br><br>\n"
-"                       Haga el <a href=\"https://www.odoo.com/page/tour?utm_source=db&amp;utm_medium=auth\" style=\"color: #875A7B;\">Recorrido de Odoo</a> para descubrir nuestra herramienta...\n"
+"                       Haga el <a href=\"https://www.HaliBlu.com/page/tour?utm_source=db&amp;utm_medium=auth\" style=\"color: #875A7B;\">Recorrido de HaliBlu</a> para descubrir nuestra herramienta...\n"
 "                        <br><br>\n"
-"                         ¡Disfrute de Odoo!<br>\n"
+"                         ¡Disfrute de HaliBlu!<br>\n"
 "                        --<br>El equipo de <t t-out=\"object.company_id.name or ''\">SuCompañía</t>\n"
 "                    </div>\n"
 "                </td></tr>\n"
@@ -373,7 +373,7 @@ msgstr ""
 "<tr><td align=\"center\" style=\"min-width: 590px;\">\n"
 "    <table border=\"0\" cellpadding=\"0\" cellspacing=\"0\" width=\"590\" style=\"min-width: 590px; background-color: #F1F1F1; color: #454748; padding: 8px; border-collapse:separate;\">\n"
 "      <tr><td style=\"text-align: center; font-size: 13px;\">\n"
-"        Con la tecnología de <a target=\"_blank\" href=\"https://www.odoo.com?utm_source=db&amp;utm_medium=auth\" style=\"color: #875A7B;\">Odoo</a>\n"
+"        Con la tecnología de <a target=\"_blank\" href=\"https://www.HaliBlu.com?utm_source=db&amp;utm_medium=auth\" style=\"color: #875A7B;\">HaliBlu</a>\n"
 "      </td></tr>\n"
 "    </table>\n"
 "</td></tr>\n"
@@ -459,7 +459,7 @@ msgid ""
 "<tr><td align=\"center\" style=\"min-width: 590px;\">\n"
 "    <table border=\"0\" cellpadding=\"0\" cellspacing=\"0\" width=\"590\" style=\"min-width: 590px; background-color: #F1F1F1; color: #454748; padding: 8px; border-collapse:separate;\">\n"
 "      <tr><td style=\"text-align: center; font-size: 13px;\">\n"
-"        Powered by <a target=\"_blank\" href=\"https://www.odoo.com?utm_source=db&amp;utm_medium=auth\" style=\"color: #875A7B;\">Odoo</a>\n"
+"        Powered by <a target=\"_blank\" href=\"https://www.HaliBlu.com?utm_source=db&amp;utm_medium=auth\" style=\"color: #875A7B;\">HaliBlu</a>\n"
 "      </td></tr>\n"
 "    </table>\n"
 "</td></tr>\n"
@@ -542,7 +542,7 @@ msgstr ""
 "<tr><td align=\"center\" style=\"min-width: 590px;\">\n"
 "    <table border=\"0\" cellpadding=\"0\" cellspacing=\"0\" width=\"590\" style=\"min-width: 590px; background-color: #F1F1F1; color: #454748; padding: 8px; border-collapse:separate;\">\n"
 "      <tr><td style=\"text-align: center; font-size: 13px;\">\n"
-"        Con la tecnología de <a target=\"_blank\" href=\"https://www.odoo.com?utm_source=db&amp;utm_medium=auth\" style=\"color: #875A7B;\">Odoo</a>\n"
+"        Con la tecnología de <a target=\"_blank\" href=\"https://www.HaliBlu.com?utm_source=db&amp;utm_medium=auth\" style=\"color: #875A7B;\">HaliBlu</a>\n"
 "      </td></tr>\n"
 "    </table>\n"
 "</td></tr>\n"
@@ -554,7 +554,7 @@ msgid "Already have an account?"
 msgstr "¿Ya tiene una cuenta?"
 
 #. module: auth_signup
-#. odoo-python
+#. HaliBlu-python
 #: code:addons/auth_signup/controllers/main.py:0
 #, python-format
 msgid "Another user is already registered using this email address."
@@ -563,7 +563,7 @@ msgstr ""
 "electrónico."
 
 #. module: auth_signup
-#. odoo-python
+#. HaliBlu-python
 #: code:addons/auth_signup/controllers/main.py:0
 #, python-format
 msgid "Authentication Failed."
@@ -580,7 +580,7 @@ msgid "Browser"
 msgstr "Navegador"
 
 #. module: auth_signup
-#. odoo-python
+#. HaliBlu-python
 #: code:addons/auth_signup/models/res_users.py:0
 #, python-format
 msgid "Cannot send email: user %s has no email address."
@@ -624,7 +624,7 @@ msgid "Contact"
 msgstr "Contacto"
 
 #. module: auth_signup
-#. odoo-python
+#. HaliBlu-python
 #: code:addons/auth_signup/models/res_users.py:0
 #, python-format
 msgid ""
@@ -635,14 +635,14 @@ msgstr ""
 "su servidor de correo de salida."
 
 #. module: auth_signup
-#. odoo-python
+#. HaliBlu-python
 #: code:addons/auth_signup/controllers/main.py:0
 #, python-format
 msgid "Could not create a new account."
 msgstr "No se pudo crear una cuenta nueva."
 
 #. module: auth_signup
-#. odoo-python
+#. HaliBlu-python
 #: code:addons/auth_signup/controllers/main.py:0
 #, python-format
 msgid "Could not reset your password"
@@ -706,14 +706,14 @@ msgstr ""
 "este enlace:<br/>"
 
 #. module: auth_signup
-#. odoo-python
+#. HaliBlu-python
 #: code:addons/auth_signup/models/res_users.py:0
 #, python-format
 msgid "In %(country)s"
 msgstr "En %(country)s"
 
 #. module: auth_signup
-#. odoo-python
+#. HaliBlu-python
 #: code:addons/auth_signup/controllers/main.py:0
 #, python-format
 msgid "Invalid signup token"
@@ -731,21 +731,21 @@ msgid "Marc Demo"
 msgstr "Marc Demo"
 
 #. module: auth_signup
-#. odoo-python
+#. HaliBlu-python
 #: code:addons/auth_signup/models/res_users.py:0
 #, python-format
 msgid "Multiple accounts found for this login"
 msgstr "Se encontraron varias cuentas para este inicio de sesión"
 
 #. module: auth_signup
-#. odoo-python
+#. HaliBlu-python
 #: code:addons/auth_signup/models/res_users.py:0
 #, python-format
 msgid "Near %(city)s, %(region)s, %(country)s"
 msgstr "Cerca de %(city)s, %(region)s, %(country)s"
 
 #. module: auth_signup
-#. odoo-python
+#. HaliBlu-python
 #: code:addons/auth_signup/models/res_users.py:0
 #, python-format
 msgid "Near %(region)s, %(country)s"
@@ -757,21 +757,21 @@ msgid "Never Connected"
 msgstr "No conectado hasta ahora"
 
 #. module: auth_signup
-#. odoo-python
+#. HaliBlu-python
 #: code:addons/auth_signup/models/res_users.py:0
 #, python-format
 msgid "New Connection to your Account"
 msgstr "Nueva conexión a su cuenta"
 
 #. module: auth_signup
-#. odoo-python
+#. HaliBlu-python
 #: code:addons/auth_signup/models/res_users.py:0
 #, python-format
 msgid "No account found for this login"
 msgstr "No se encontró una cuenta para este inicio de sesión"
 
 #. module: auth_signup
-#. odoo-python
+#. HaliBlu-python
 #: code:addons/auth_signup/controllers/main.py:0
 #, python-format
 msgid "No login provided."
@@ -785,8 +785,8 @@ msgstr "SO"
 #. module: auth_signup
 #: model_terms:ir.ui.view,arch_db:auth_signup.alert_login_new_device
 #: model_terms:ir.ui.view,arch_db:auth_signup.reset_password_email
-msgid "Odoo"
-msgstr "Odoo"
+msgid "HaliBlu"
+msgstr "HaliBlu"
 
 #. module: auth_signup
 #: model:ir.model.fields.selection,name:auth_signup.selection__res_config_settings__auth_signup_uninvited__b2b
@@ -809,14 +809,14 @@ msgid "Password Reset"
 msgstr "Restablecimiento de contraseña"
 
 #. module: auth_signup
-#. odoo-python
+#. HaliBlu-python
 #: code:addons/auth_signup/models/res_users.py:0
 #, python-format
 msgid "Password reset"
 msgstr "Restablecimiento de contraseña"
 
 #. module: auth_signup
-#. odoo-python
+#. HaliBlu-python
 #: code:addons/auth_signup/controllers/main.py:0
 #, python-format
 msgid "Password reset instructions sent to your email"
@@ -825,7 +825,7 @@ msgstr ""
 "electrónico"
 
 #. module: auth_signup
-#. odoo-python
+#. HaliBlu-python
 #: code:addons/auth_signup/controllers/main.py:0
 #, python-format
 msgid "Passwords do not match; please retype them."
@@ -934,42 +934,42 @@ msgid "Signup URL"
 msgstr "URL de registro"
 
 #. module: auth_signup
-#. odoo-python
+#. HaliBlu-python
 #: code:addons/auth_signup/models/res_users.py:0
 #, python-format
 msgid "Signup is not allowed for uninvited users"
 msgstr "Solo los usuarios invitados pueden registrarse."
 
 #. module: auth_signup
-#. odoo-python
+#. HaliBlu-python
 #: code:addons/auth_signup/models/res_partner.py:0
 #, python-format
 msgid "Signup token '%s' is no longer valid"
 msgstr "El token de registro '%s' ya no es válido"
 
 #. module: auth_signup
-#. odoo-python
+#. HaliBlu-python
 #: code:addons/auth_signup/models/res_partner.py:0
 #, python-format
 msgid "Signup token '%s' is not valid"
 msgstr "El token de registro '%s' no es válido"
 
 #. module: auth_signup
-#. odoo-python
+#. HaliBlu-python
 #: code:addons/auth_signup/models/res_users.py:0
 #, python-format
 msgid "Signup: invalid template user"
 msgstr "Registro: plantilla de usuario no válida"
 
 #. module: auth_signup
-#. odoo-python
+#. HaliBlu-python
 #: code:addons/auth_signup/models/res_users.py:0
 #, python-format
 msgid "Signup: no login given for new user"
 msgstr "Registro: usuario nuevo sin acceso otorgado"
 
 #. module: auth_signup
-#. odoo-python
+#. HaliBlu-python
 #: code:addons/auth_signup/models/res_users.py:0
 #, python-format
 msgid "Signup: no name or partner given for new user"
@@ -987,14 +987,14 @@ msgstr ""
 "Plantilla de usuario para los nuevos usuarios creados a través del registro"
 
 #. module: auth_signup
-#. odoo-python
+#. HaliBlu-python
 #: code:addons/auth_signup/controllers/main.py:0
 #, python-format
 msgid "The form was not properly filled in."
 msgstr "El formulario no se rellenó correctamente."
 
 #. module: auth_signup
-#. odoo-python
+#. HaliBlu-python
 #: code:addons/auth_signup/models/res_users.py:0
 #, python-format
 msgid ""
@@ -1031,7 +1031,7 @@ msgid "Welcome to {{ object.company_id.name }}!"
 msgstr "¡Le damos la bienvenida a {{ object.company_id.name }}!"
 
 #. module: auth_signup
-#. odoo-python
+#. HaliBlu-python
 #: code:addons/auth_signup/models/res_users.py:0
 #, python-format
 msgid "You cannot perform this action on an archived user."
@@ -1077,7 +1077,7 @@ msgstr "info@sucompañía.com"
 #: model:mail.template,subject:auth_signup.set_password_email
 msgid ""
 "{{ object.create_uid.name }} from {{ object.company_id.name }} invites you "
-"to connect to Odoo"
+"to connect to HaliBlu"
 msgstr ""
 "{{ object.create_uid.name }} de {{ object.company_id.name }} le invita a "
-"conectarse con Odoo"
+"conectarse con HaliBlu"
