--- a/addons/auth_signup/i18n/fr.po
+++ b/addons/auth_signup/i18n/fr.po
@@ -1,21 +1,21 @@
-# Translation of Odoo Server.
+# Translation of HaliBlu Server.
 # This file contains the translation of the following modules:
 # 	* auth_signup
 # 
 # Translators:
-# Wil Odoo, 2023
+# Wil HaliBlu, 2023
 # Jolien De Paepe, 2023
 # Walid Sahli, 2024
 # Manon Rondou, 2024
 # 
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 17.0\n"
+"Project-Id-Version: HaliBlu Server 17.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-08-13 10:27+0000\n"
 "PO-Revision-Date: 2023-10-26 23:09+0000\n"
 "Last-Translator: Manon Rondou, 2024\n"
-"Language-Team: French (https://app.transifex.com/odoo/teams/41243/fr/)\n"
+"Language-Team: French (https://app.transifex.com/HaliBlu/teams/41243/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
@@ -31,11 +31,11 @@ msgstr "+1 650-123-4567"
 #: model_terms:ir.ui.view,arch_db:auth_signup.reset_password_email
 msgid ""
 ",<br/><br/>\n"
-"                                A password reset was requested for the Odoo account linked to this email.\n"
+"                                A password reset was requested for the HaliBlu account linked to this email.\n"
 "                                You may change your password by following this link which will remain valid during 24 hours:<br/>"
 msgstr ""
 ",<br/><br/>\n"
-"                                Une réinitialisation du mot de passe a été demandée pour le compte Odoo lié à cette adresse mail.\n"
+"                                Une réinitialisation du mot de passe a été demandée pour le compte HaliBlu lié à cette adresse mail.\n"
 "                                Vous pouvez changer votre mot de passe en suivant ce client qui restera valide pendant 24 heures :<br/>"
 
 #. module: auth_signup
@@ -222,7 +222,7 @@ msgid ""
 "        <td align=\"center\" style=\"min-width: 590px;\">\n"
 "            <table border=\"0\" cellpadding=\"0\" cellspacing=\"0\" width=\"590\" style=\"min-width: 590px; background-color: white; padding: 0px 8px 0px 8px; border-collapse:separate;\">\n"
 "                <tr><td valign=\"middle\">\n"
-"                    <span style=\"font-size: 10px;\">Welcome to Odoo</span><br>\n"
+"                    <span style=\"font-size: 10px;\">Welcome to HaliBlu</span><br>\n"
 "                    <span style=\"font-size: 20px; font-weight: bold;\">\n"
 "                        <t t-out=\"object.name or ''\">Marc Demo</t>\n"
 "                    </span>\n"
@@ -242,20 +242,20 @@ msgid ""
 "                <tr><td valign=\"top\" style=\"font-size: 13px;\">\n"
 "                    <div>\n"
 "                        Dear <t t-out=\"object.name or ''\">Marc Demo</t>,<br><br>\n"
-"                        You have been invited by <t t-out=\"object.create_uid.name or ''\">OdooBot</t> of <t t-out=\"object.company_id.name or ''\">YourCompany</t> to connect on Odoo.\n"
+"                        You have been invited by <t t-out=\"object.create_uid.name or ''\">HaliBluBot</t> of <t t-out=\"object.company_id.name or ''\">YourCompany</t> to connect on HaliBlu.\n"
 "                        <div style=\"margin: 16px 0px 16px 0px;\">\n"
 "                            <a t-att-href=\"object.signup_url\" style=\"background-color: #875A7B; padding: 8px 16px 8px 16px; text-decoration: none; color: #fff; border-radius: 5px; font-size:13px;\">\n"
 "                                Accept invitation\n"
 "                            </a>\n"
 "                        </div>\n"
 "                        <t t-set=\"website_url\" t-value=\"object.get_base_url()\"></t>\n"
-"                        Your Odoo domain is: <b><a t-att-href=\"website_url\" t-out=\"website_url or ''\">http://yourcompany.odoo.com</a></b><br>\n"
+"                        Your HaliBlu domain is: <b><a t-att-href=\"website_url\" t-out=\"website_url or ''\">http://yourcompany.HaliBlu.com</a></b><br>\n"
 "                        Your sign in email is: <b><a t-attf-href=\"/web/login?login={{ object.email }}\" target=\"_blank\" t-out=\"object.email or ''\">mark.brown23@example.com</a></b><br><br>\n"
-"                        Never heard of Odoo? It’s an all-in-one business software loved by 7+ million users. It will considerably improve your experience at work and increase your productivity.\n"
+"                        Never heard of HaliBlu? It’s an all-in-one business software loved by 7+ million users. It will considerably improve your experience at work and increase your productivity.\n"
 "                        <br><br>\n"
-"                        Have a look at the <a href=\"https://www.odoo.com/page/tour?utm_source=db&amp;utm_medium=auth\" style=\"color: #875A7B;\">Odoo Tour</a> to discover the tool.\n"
+"                        Have a look at the <a href=\"https://www.HaliBlu.com/page/tour?utm_source=db&amp;utm_medium=auth\" style=\"color: #875A7B;\">HaliBlu Tour</a> to discover the tool.\n"
 "                        <br><br>\n"
-"                        Enjoy Odoo!<br>\n"
+"                        Enjoy HaliBlu!<br>\n"
 "                        --<br>The <t t-out=\"object.company_id.name or ''\">YourCompany</t> Team\n"
 "                    </div>\n"
 "                </td></tr>\n"
@@ -291,7 +291,7 @@ msgid ""
 "<tr><td align=\"center\" style=\"min-width: 590px;\">\n"
 "    <table border=\"0\" cellpadding=\"0\" cellspacing=\"0\" width=\"590\" style=\"min-width: 590px; background-color: #F1F1F1; color: #454748; padding: 8px; border-collapse:separate;\">\n"
 "      <tr><td style=\"text-align: center; font-size: 13px;\">\n"
-"        Powered by <a target=\"_blank\" href=\"https://www.odoo.com?utm_source=db&amp;utm_medium=auth\" style=\"color: #875A7B;\">Odoo</a>\n"
+"        Powered by <a target=\"_blank\" href=\"https://www.HaliBlu.com?utm_source=db&amp;utm_medium=auth\" style=\"color: #875A7B;\">HaliBlu</a>\n"
 "      </td></tr>\n"
 "    </table>\n"
 "</td></tr>\n"
@@ -305,7 +305,7 @@ msgstr ""
 "        <td align=\"center\" style=\"min-width: 590px;\">\n"
 "            <table border=\"0\" cellpadding=\"0\" cellspacing=\"0\" width=\"590\" style=\"min-width: 590px; background-color: white; padding: 0px 8px 0px 8px; border-collapse:separate;\">\n"
 "                <tr><td valign=\"middle\">\n"
-"                    <span style=\"font-size: 10px;\">Bienvenue sur Odoo</span><br>\n"
+"                    <span style=\"font-size: 10px;\">Bienvenue sur HaliBlu</span><br>\n"
 "                    <span style=\"font-size: 20px; font-weight: bold;\">\n"
 "                        <t t-out=\"object.name or ''\">Marc Demo</t>\n"
 "                    </span>\n"
@@ -325,20 +325,20 @@ msgstr ""
 "                <tr><td valign=\"top\" style=\"font-size: 13px;\">\n"
 "                    <div>\n"
 "                        Cher <t t-out=\"object.name or ''\">Marc Demo</t>,<br><br>\n"
-"                        Vous avez été invité par <t t-out=\"object.create_uid.name or ''\">OdooBot</t> de <t t-out=\"object.company_id.name or ''\">YourCompany</t> à vous connecter à Odoo.\n"
+"                        Vous avez été invité par <t t-out=\"object.create_uid.name or ''\">HaliBluBot</t> de <t t-out=\"object.company_id.name or ''\">YourCompany</t> à vous connecter à HaliBlu.\n"
 "                        <div style=\"margin: 16px 0px 16px 0px;\">\n"
 "                            <a t-att-href=\"object.signup_url\" style=\"background-color: #875A7B; padding: 8px 16px 8px 16px; text-decoration: none; color: #fff; border-radius: 5px; font-size:13px;\">\n"
 "                                Accepter l'invitation\n"
 "                            </a>\n"
 "                        </div>\n"
 "                        <t t-set=\"website_url\" t-value=\"object.get_base_url()\"></t>\n"
-"                        Votre domaine Odoo est : <b><a t-att-href=\"website_url\" t-out=\"website_url or ''\">http://yourcompany.odoo.com</a></b><br>\n"
+"                        Votre domaine HaliBlu est : <b><a t-att-href=\"website_url\" t-out=\"website_url or ''\">http://yourcompany.HaliBlu.com</a></b><br>\n"
 "                        Votre adresse e-mail de connexion est : <b><a t-attf-href=\"/web/login?login={{ object.email }}\" target=\"_blank\" t-out=\"object.email or ''\">mark.brown23@example.com</a></b><br><br>\n"
-"                        Vous n'avez jamais entendu parler d'Odoo ? C'est un logiciel professionnel tout-en-un apprécié par plus de 7 millions d'utilisateurs. Il améliorera considérablement votre expérience au travail et augmentera votre productivité.\n"
+"                        Vous n'avez jamais entendu parler d'HaliBlu ? C'est un logiciel professionnel tout-en-un apprécié par plus de 7 millions d'utilisateurs. Il améliorera considérablement votre expérience au travail et augmentera votre productivité.\n"
 "                        <br><br>\n"
-"                        Jetez un coup d’œil à notre <a href=\"https://www.odoo.com/page/tour?utm_source=db&amp;utm_medium=auth\" style=\"color: #875A7B;\">Odoo Tour</a> pour découvrir l'outil.\n"
+"                        Jetez un coup d’œil à notre <a href=\"https://www.HaliBlu.com/page/tour?utm_source=db&amp;utm_medium=auth\" style=\"color: #875A7B;\">HaliBlu Tour</a> pour découvrir l'outil.\n"
 "                        <br><br>\n"
-"                        Profitez d'Odoo !<br>\n"
+"                        Profitez d'HaliBlu !<br>\n"
 "                        --<br>L'équipe <t t-out=\"object.company_id.name or ''\">YourCompany</t> \n"
 "                    </div>\n"
 "                </td></tr>\n"
@@ -374,7 +374,7 @@ msgstr ""
 "<tr><td align=\"center\" style=\"min-width: 590px;\">\n"
 "    <table border=\"0\" cellpadding=\"0\" cellspacing=\"0\" width=\"590\" style=\"min-width: 590px; background-color: #F1F1F1; color: #454748; padding: 8px; border-collapse:separate;\">\n"
 "      <tr><td style=\"text-align: center; font-size: 13px;\">\n"
-"        Généré par <a target=\"_blank\" href=\"https://www.odoo.com?utm_source=db&amp;utm_medium=auth\" style=\"color: #875A7B;\">Odoo</a>\n"
+"        Généré par <a target=\"_blank\" href=\"https://www.HaliBlu.com?utm_source=db&amp;utm_medium=auth\" style=\"color: #875A7B;\">HaliBlu</a>\n"
 "      </td></tr>\n"
 "    </table>\n"
 "</td></tr>\n"
@@ -460,7 +460,7 @@ msgid ""
 "<tr><td align=\"center\" style=\"min-width: 590px;\">\n"
 "    <table border=\"0\" cellpadding=\"0\" cellspacing=\"0\" width=\"590\" style=\"min-width: 590px; background-color: #F1F1F1; color: #454748; padding: 8px; border-collapse:separate;\">\n"
 "      <tr><td style=\"text-align: center; font-size: 13px;\">\n"
-"        Powered by <a target=\"_blank\" href=\"https://www.odoo.com?utm_source=db&amp;utm_medium=auth\" style=\"color: #875A7B;\">Odoo</a>\n"
+"        Powered by <a target=\"_blank\" href=\"https://www.HaliBlu.com?utm_source=db&amp;utm_medium=auth\" style=\"color: #875A7B;\">HaliBlu</a>\n"
 "      </td></tr>\n"
 "    </table>\n"
 "</td></tr>\n"
@@ -543,7 +543,7 @@ msgstr ""
 "<tr><td align=\"center\" style=\"min-width: 590px;\">\n"
 "    <table border=\"0\" cellpadding=\"0\" cellspacing=\"0\" width=\"590\" style=\"min-width: 590px; background-color: #F1F1F1; color: #454748; padding: 8px; border-collapse:separate;\">\n"
 "      <tr><td style=\"text-align: center; font-size: 13px;\">\n"
-"        Généré par <a target=\"_blank\" href=\"https://www.odoo.com?utm_source=db&amp;utm_medium=auth\" style=\"color: #875A7B;\">Odoo</a>\n"
+"        Généré par <a target=\"_blank\" href=\"https://www.HaliBlu.com?utm_source=db&amp;utm_medium=auth\" style=\"color: #875A7B;\">HaliBlu</a>\n"
 "      </td></tr>\n"
 "    </table>\n"
 "</td></tr>\n"
@@ -555,14 +555,14 @@ msgid "Already have an account?"
 msgstr "Vous avez déjà un compte ?"
 
 #. module: auth_signup
-#. odoo-python
+#. HaliBlu-python
 #: code:addons/auth_signup/controllers/main.py:0
 #, python-format
 msgid "Another user is already registered using this email address."
 msgstr "Un autre utilisateur est déjà enregistré avec cette adresse e-mail."
 
 #. module: auth_signup
-#. odoo-python
+#. HaliBlu-python
 #: code:addons/auth_signup/controllers/main.py:0
 #, python-format
 msgid "Authentication Failed."
@@ -579,7 +579,7 @@ msgid "Browser"
 msgstr "Navigateur"
 
 #. module: auth_signup
-#. odoo-python
+#. HaliBlu-python
 #: code:addons/auth_signup/models/res_users.py:0
 #, python-format
 msgid "Cannot send email: user %s has no email address."
@@ -622,7 +622,7 @@ msgid "Contact"
 msgstr "Contact"
 
 #. module: auth_signup
-#. odoo-python
+#. HaliBlu-python
 #: code:addons/auth_signup/models/res_users.py:0
 #, python-format
 msgid ""
@@ -633,14 +633,14 @@ msgstr ""
 "configuration de votre serveur de messagerie sortant"
 
 #. module: auth_signup
-#. odoo-python
+#. HaliBlu-python
 #: code:addons/auth_signup/controllers/main.py:0
 #, python-format
 msgid "Could not create a new account."
 msgstr "Impossible de créer un nouveau compte."
 
 #. module: auth_signup
-#. odoo-python
+#. HaliBlu-python
 #: code:addons/auth_signup/controllers/main.py:0
 #, python-format
 msgid "Could not reset your password"
@@ -703,14 +703,14 @@ msgstr ""
 "immédiatement en cliquant sur ce lien :<br/>"
 
 #. module: auth_signup
-#. odoo-python
+#. HaliBlu-python
 #: code:addons/auth_signup/models/res_users.py:0
 #, python-format
 msgid "In %(country)s"
 msgstr "En %(country)s"
 
 #. module: auth_signup
-#. odoo-python
+#. HaliBlu-python
 #: code:addons/auth_signup/controllers/main.py:0
 #, python-format
 msgid "Invalid signup token"
@@ -729,21 +729,21 @@ msgid "Marc Demo"
 msgstr "Marc Demo"
 
 #. module: auth_signup
-#. odoo-python
+#. HaliBlu-python
 #: code:addons/auth_signup/models/res_users.py:0
 #, python-format
 msgid "Multiple accounts found for this login"
 msgstr "Plusieurs comptes trouvés pour cet identifiant"
 
 #. module: auth_signup
-#. odoo-python
+#. HaliBlu-python
 #: code:addons/auth_signup/models/res_users.py:0
 #, python-format
 msgid "Near %(city)s, %(region)s, %(country)s"
 msgstr "Près de %(city)s, %(region)s, %(country)s"
 
 #. module: auth_signup
-#. odoo-python
+#. HaliBlu-python
 #: code:addons/auth_signup/models/res_users.py:0
 #, python-format
 msgid "Near %(region)s, %(country)s"
@@ -755,21 +755,21 @@ msgid "Never Connected"
 msgstr "Jamais connecté"
 
 #. module: auth_signup
-#. odoo-python
+#. HaliBlu-python
 #: code:addons/auth_signup/models/res_users.py:0
 #, python-format
 msgid "New Connection to your Account"
 msgstr "Nouvelle connexion à votre compte"
 
 #. module: auth_signup
-#. odoo-python
+#. HaliBlu-python
 #: code:addons/auth_signup/models/res_users.py:0
 #, python-format
 msgid "No account found for this login"
 msgstr "Aucun compte trouvé pour cet identifiant"
 
 #. module: auth_signup
-#. odoo-python
+#. HaliBlu-python
 #: code:addons/auth_signup/controllers/main.py:0
 #, python-format
 msgid "No login provided."
@@ -783,8 +783,8 @@ msgstr "OS"
 #. module: auth_signup
 #: model_terms:ir.ui.view,arch_db:auth_signup.alert_login_new_device
 #: model_terms:ir.ui.view,arch_db:auth_signup.reset_password_email
-msgid "Odoo"
-msgstr "Odoo"
+msgid "HaliBlu"
+msgstr "HaliBlu"
 
 #. module: auth_signup
 #: model:ir.model.fields.selection,name:auth_signup.selection__res_config_settings__auth_signup_uninvited__b2b
@@ -807,14 +807,14 @@ msgid "Password Reset"
 msgstr "Réinitialisation du mot de passe"
 
 #. module: auth_signup
-#. odoo-python
+#. HaliBlu-python
 #: code:addons/auth_signup/models/res_users.py:0
 #, python-format
 msgid "Password reset"
 msgstr "Réinitialisation du mot de passe"
 
 #. module: auth_signup
-#. odoo-python
+#. HaliBlu-python
 #: code:addons/auth_signup/controllers/main.py:0
 #, python-format
 msgid "Password reset instructions sent to your email"
@@ -823,7 +823,7 @@ msgstr ""
 "e-mail"
 
 #. module: auth_signup
-#. odoo-python
+#. HaliBlu-python
 #: code:addons/auth_signup/controllers/main.py:0
 #, python-format
 msgid "Passwords do not match; please retype them."
@@ -933,42 +933,42 @@ msgid "Signup URL"
 msgstr "URL de connexion"
 
 #. module: auth_signup
-#. odoo-python
+#. HaliBlu-python
 #: code:addons/auth_signup/models/res_users.py:0
 #, python-format
 msgid "Signup is not allowed for uninvited users"
 msgstr "Les utilisateurs non invités ne sont pas autorisés à s'inscrire"
 
 #. module: auth_signup
-#. odoo-python
+#. HaliBlu-python
 #: code:addons/auth_signup/models/res_partner.py:0
 #, python-format
 msgid "Signup token '%s' is no longer valid"
 msgstr "Le jeton de connexion '%s' n'est plus valable"
 
 #. module: auth_signup
-#. odoo-python
+#. HaliBlu-python
 #: code:addons/auth_signup/models/res_partner.py:0
 #, python-format
 msgid "Signup token '%s' is not valid"
 msgstr "Le jeton de connexion '%s' n'est pas valable"
 
 #. module: auth_signup
-#. odoo-python
+#. HaliBlu-python
 #: code:addons/auth_signup/models/res_users.py:0
 #, python-format
 msgid "Signup: invalid template user"
 msgstr "Inscription : Modèle d'utilisateur invalide"
 
 #. module: auth_signup
-#. odoo-python
+#. HaliBlu-python
 #: code:addons/auth_signup/models/res_users.py:0
 #, python-format
 msgid "Signup: no login given for new user"
 msgstr "Inscription : pas d'identifiant donné pour ce nouvel utilisateur"
 
 #. module: auth_signup
-#. odoo-python
+#. HaliBlu-python
 #: code:addons/auth_signup/models/res_users.py:0
 #, python-format
 msgid "Signup: no name or partner given for new user"
@@ -987,14 +987,14 @@ msgstr ""
 "connexion"
 
 #. module: auth_signup
-#. odoo-python
+#. HaliBlu-python
 #: code:addons/auth_signup/controllers/main.py:0
 #, python-format
 msgid "The form was not properly filled in."
 msgstr "Le formulaire n'est pas correctement rempli."
 
 #. module: auth_signup
-#. odoo-python
+#. HaliBlu-python
 #: code:addons/auth_signup/models/res_users.py:0
 #, python-format
 msgid ""
@@ -1031,7 +1031,7 @@ msgid "Welcome to {{ object.company_id.name }}!"
 msgstr "Bienvenue chez {{ object.company_id.name }}!"
 
 #. module: auth_signup
-#. odoo-python
+#. HaliBlu-python
 #: code:addons/auth_signup/models/res_users.py:0
 #, python-format
 msgid "You cannot perform this action on an archived user."
@@ -1077,7 +1077,7 @@ msgstr "info@yourcompany.com"
 #: model:mail.template,subject:auth_signup.set_password_email
 msgid ""
 "{{ object.create_uid.name }} from {{ object.company_id.name }} invites you "
-"to connect to Odoo"
+"to connect to HaliBlu"
 msgstr ""
 "{{ object.create_uid.name }} de {{ object.company_id.name }} vous invite à "
-"vous connecter à Odoo"
+"vous connecter à HaliBlu"
